--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,11 +32,15 @@ jobs:
           path: |
             dist
             package.json
-
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        runs: ls
       - name: Deploy
         run: echo "Deploying..."
