--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -41,6 +41,6 @@ jobs:
         with:
           name: dist-files
       - name: Output contents
-        runs: ls
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
